17 December 2008

* Only look at HOME environment variable if -h flag is passed.

28 October 2008

* Alter IMAP fetching code to build a UID list of mails to fetch and then fetch
  them, rather than iterating through all the mails regardless.

07 September 2008

* Process all privsep messages in parent rather than just the first.
  Fixes timeouts reported by Frank Terbeck.

08 August 2008

* Sort fetch list for POP3 to preserve server mailbox order, requested
  by Jeremy C Reed.
* Fix bug where current user could overwrite default-user/command-user
  from configuration file.

26 June 2008

* Lookup using courier-authlib. Build with make -DLOOKUP_COURIER and
  use "set lookup-order courier passwd".
* Framework for changing user lookup method. At the moment only normal
  Unix passwd (getpwnam(3)) is supported. This means only string
  usernames are supported - to enter a numeric Unix UID, enclose it
  in quotes.
* Get rid of from-headers which was ugly and unreliable.

30 May 2008

* Make NNTP fetching save the cache file after each mail since some NNTP
  servers (such as my ISP's) are horrendously unreliable.
* Handle 423/430 response from ARTICLE command in NNTP correctly.

26 May 2008

* New option: parallel-accounts. Sets number of accounts to fetch in parallel.

22 May 2008

* deliver-imap fetch method; suggested by Jason Dixon a while ago.

03 April 2008

* Support an extra space on the optional FLAGS response when fetching a mail,
  fixes problems with CommuniGate Pro, thanks to Anthony Wood.
* New flags, no-cram-md5 and no-login, on IMAP accounts to force fdm not to
  use cram-md5 or login authentication even if the server supports it. From
  Anthony Wood.

01 April 2008

* Support SIGUSR1 as an alias for SIGINFO, for platforms without SIGINFO.

06 March 2008

* Support multiple folders (folders { "a" "b" }) on IMAP fetching. Requested by
  Claudio Alessi.

05 March 2008

* Print current progress on SIGINFO. Be careful with this, it is possible