@@ -1,3 +1,8 @@
+27 December 2008
+
+* Don't be as strict about format at the end of messages when using IMAP -
+  accept additional information as well as FLAGS. Reported by rivo nurges.
+
 17 December 2008
 
 * Only look at HOME environment variable if -h flag is passed.
@@ -864,7 +869,7 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.204 2008-12-22 16:20:05 nicm Exp $
+$Id: CHANGES,v 1.205 2008-12-27 21:08:02 nicm Exp $
 
  LocalWords:  Terbeck authlib DLOOKUP ISP's Alessi dayofyear Lopes gmail STAT
  LocalWords:  akarinotengoku D'Angelo Pantyukhin BIC Erdely Rf patnel Fahlke vv
